// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StaticTicketList /> shapshots should not throw if items is undefined 1`] = `
<div
  className="ticketList"
>
  
</div>
`;

exports[`<StaticTicketList /> shapshots should render all of the items 1`] = `
<div
  className="ticketList"
>
  <div
    className="row"
  />
  <div
    className="row"
  />
  <div
    className="row"
  />
  <div
    className="row"
  />
  <div
    className="row"
  />
  <div
    className="row"
  />
  <div
    className="row"
  />
  <div
    className="row"
  />
  <div
    className="row"
  />
  <div
    className="row"
  />
</div>
`;

exports[`<StaticTicketList /> shapshots should render nothing if no items 1`] = `
<div
  className="ticketList"
>
  
</div>
`;
